# Backend

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  prestart.sh  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 12af6489266b_health_check__create_healthcheckresult_.py  20220922140612-7353e7f50367_health_check__create_model_healthcheckresult.py  8b61f1eaed80_init.py
app/: database.py  main.py  models.py  routers.py
app/apps/health_check/: endpoints.py  models.py  schemas.py
app/apps/health_check/services/: health_checker.py
app/core/: config.py  database.py  models.py  routers.py
app/health_check/: endpoints.py  models.py  services.py
src/: main.py
src/apps/health_check/: endpoints.py
src/apps/health_check/services/: health_checker.py
src/core/: database.py  models.py  routers.py
tests/: conftest.py  test_health_check.py
