[tool.poetry]
name = "Backend"
version = "0.1.0"
description = ""
authors = ["Алексей <alexleskov2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.40"
pydantic = {extras = ["dotenv"], version = "^1.9.2"}
sqlmodel = "^0.0.6"
aiosqlite3 = "^0.3.0"
aiosqlite = "^0.17.0"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.0"
pre-commit = "^2.8.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
