[tool.poetry]
name = "Backend"
version = "0.1.0"
description = ""
authors = ["Алексей <alexleskov2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.83.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
sqlmodel = "^0.0.8"
aiosqlite = "^0.17.0"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
requests = "^2.28.1"
SQLAlchemy-Utils = "^0.38.3"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
flake8 = "^5.0.4"
autoflake = "^1.5.3"
mypy = "^0.971"
isort = "^5.10.1"
pre-commit = "^2.20.0"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
